--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "4                 1       23000            0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
     "lending_df = pd.read_csv(file_path)\n",
     "\n",
     "# Review the DataFrame\n",
-    "lending_df.head()"
+    "lending_df.head()\n"
    ]
   },
   {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        "(58152, 7)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,8 @@
     "                                                    random_state = 1,\n",
     "                                                    stratify = y\n",
     "                                                    )\n",
-    "X_train.shape"
+    "X_train.shape\n",
+    "\n"
    ]
   },
   {
@@ -444,6 +445,13 @@
     "# Score the model = added for additional information on the accuracy of the model \n",
     "print(f\"Training Data Score: {log_regression_model.score(X_train, y_train)}\")\n",
     "print(f\"Testing Data Score: {log_regression_model.score(X_test, y_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Step 1: Fit a logistic regression model by using the training data (`X_train` and `y_train`)."
    ]
   },
   {
@@ -550,13 +558,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Test Set:\n",
       "[[18679    80]\n",
       " [   67   558]]\n"
      ]
@@ -565,18 +574,22 @@
    "source": [
     "# Generate a confusion matrix for the model\n",
     "predictions_matrix = confusion_matrix(y_test, test_predictions)\n",
+    "\n",
+    "#print confusion matrix \n",
+    "print(\"Test Set:\")\n",
     "print(predictions_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Test Set:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00     18759\n",
@@ -593,6 +606,8 @@
     "# Print the classification report for the model\n",
     "predictions_report = classification_report(y_test, test_predictions)\n",
     "\n",
+    "#print classification report\n",
+    "print(\"Test Set:\")\n",
     "print(predictions_report)\n"
    ]
   },
@@ -622,12 +637,59 @@
     "Recall is the number of true positive predictions divided by the total number of actual positive instances in the data. It measures the model's ability correctly to capture positive instances. In the case of the good loans, the ratio is again approximately 100%. In the case of the high-risk loans this ratio equals 89%, meaning that the model has incorrectly classified bad loans as good 11% of the time. This represents a good outcome, potentially screening out 89% of future loans with a high-risk of default.\n",
     "\n",
     "\n",
-    "Although the recall and precision scores indicate that the model performs well, both for good and bad loan predictions, the sample data is has a high imbalance between classes. Within our sample data, the number of bad loans is only 3% of the total dataset (see the support column in the classification report). This represents a significant imbalance between classes which may mean that the performance metrics are misleading or skewed. There are several risks associated with an imbalanced dataset, in particular the model might focus on predicting the majority class (the healthy loans) resulting in a higher number of false negatives and a lower recall for the bad loans. There is also a risk of overfitting the majority class, having learned the patterns within the data for the healhy loans, leading to the model being less able to predict instances of the bad loans. This is aso why the accuracy score (the total number of positive identifications for oth good and bad loans over the total number of loans) is a poor measure in evaluating this particular model.\n",
+    "Although the recall and precision scores indicate that the model performs well, both for good and bad loan predictions, the sample data is has a high imbalance between classes. Within our sample data, the number of bad loans is only 3% of the total dataset (see the support column in the classification report). This represents a significant imbalance between classes which may mean that the performance metrics are misleading or skewed. There are several risks associated with an imbalanced dataset, in particular the model might focus on predicting the majority class (the healthy loans) resulting in a higher number of false negatives and a lower recall for the bad loans. There is also a risk of overfitting the majority class, having learned the patterns within the data for the healthy loans, leading to the model being less able to predict instances of the bad loans. This is also why the accuracy score (the total number of positive identifications for both good and bad loans over the total number of loans) is a poor measure in evaluating this particular model.\n",
     "\n",
     "\n",
     "In conclusion the recall and precision scores indicate that that the model may provide an accurate screening tool for credit applicaitons; however, given the large imbalance between the majoity and minority classes, the model should undergo further training on sample sets with a greater number of defaulting loans for further evaluation. We can expect a much smaller number of defaulting loans in any sample, and consideration should be given to using techniques that can help address the risks of an imbalanced dataset - we can resample the dataset, producing an oversample of the bad debts vis a vis the majority set, or employ class weighting forcing the model to attach greater importance to occurrences of the minority class. \n",
     "\n",
     " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Set - confusion matrix\n",
+      "[[55980   297]\n",
+      " [  198  1677]]\n",
+      "\n",
+      "Training Set - classification report\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.99      1.00     56277\n",
+      "           1       0.85      0.89      0.87      1875\n",
+      "\n",
+      "    accuracy                           0.99     58152\n",
+      "   macro avg       0.92      0.94      0.93     58152\n",
+      "weighted avg       0.99      0.99      0.99     58152\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#_______________________________________________________________________________________________\n",
+    "\n",
+    "#Additional extra to check the results of the training data set and query if model is overfitted.\n",
+    "#_______________________________________________________________________________________________\n",
+    "\n",
+    "#Produce a predicted result for the trained model results\n",
+    "train_predictions = log_regression_model.predict(X_train)\n",
+    "\n",
+    "#Produce a confusion and clasification report on the trained data predictions\n",
+    "train_predictions_matrix = confusion_matrix(y_train, train_predictions)\n",
+    "train_predictions_report = classification_report(y_train, train_predictions)\n",
+    "\n",
+    "#Print results for the \n",
+    "print(\"Training Set - confusion matrix\")\n",
+    "print(train_predictions_matrix)\n",
+    "print(\"\")\n",
+    "print(\"Training Set - classification report\")\n",
+    "print(train_predictions_report)\n"
    ]
   },
   {
